PRH-153 - finally got the jump links to be reliable! was a focus issue.

--- a/fe-scaffold/app/scss/partials/_base-styles.scss
+++ b/fe-scaffold/app/scss/partials/_base-styles.scss
@@ -57,6 +57,10 @@ a {
   transition: 0.15s color 0s;
 }
 
+a.anchor {
+  opacity: 0;
+}
+
 button {
   transition: 0.15s background-color 0s;
 }
